@@ -7,25 +7,58 @@
 #include "pmutil.h"
 #include "pminternal.h"
 
+/* #define QUEUE_DEBUG 1 */
+
+/* code is based on 4-byte words -- it should work on a 64-bit machine
+   as long as a "long" has 4 bytes. This code could be generalized to
+   be independent of the size of "long" */
+
+typedef long int32;
+
+typedef struct {
+    long head;
+    long tail;
+    long len;
+    long msg_size; /* number of int32 in a message including extra word */
+    long overflow;
+    int32 *buffer;
+    int32 *peek;
+    int peek_flag;
+} PmQueueRep;
+
 
 PmQueue *Pm_QueueCreate(long num_msgs, long bytes_per_msg)
 {
     PmQueueRep *queue = (PmQueueRep *) pm_alloc(sizeof(PmQueueRep));
-
-	/* arg checking */
+    int int32s_per_msg = ((bytes_per_msg + sizeof(int32) - 1) &
+			  ~(sizeof(int32) - 1)) / sizeof(int32);
+    /* arg checking */
     if (!queue) 
-		return NULL;
-    
-	queue->len = num_msgs * bytes_per_msg;
-    queue->buffer = pm_alloc(queue->len);
+	return NULL;
+
+    /* need extra word per message for non-zero encoding */
+    queue->len = num_msgs * (int32s_per_msg + 1);
+    queue->buffer = (int32 *) pm_alloc(queue->len * sizeof(int32));
+    bzero(queue->buffer, queue->len * sizeof(int32));
     if (!queue->buffer) {
         pm_free(queue);
         return NULL;
+    } else { /* allocate the "peek" buffer */
+        queue->peek = (int32 *) pm_alloc(int32s_per_msg * sizeof(int32));
+	if (!queue->peek) {
+            /* free everything allocated so far and return */
+	    pm_free(queue->buffer);
+	    pm_free(queue);
+	    return NULL;
+        }
     }
+    bzero(queue->buffer, queue->len * sizeof(int32));
     queue->head = 0;
     queue->tail = 0;
-    queue->msg_size = bytes_per_msg;
+    /* msg_size is in words */
+    queue->msg_size = int32s_per_msg + 1; /* note extra word is counted */
     queue->overflow = FALSE;
+    queue->peek_flag = FALSE;
     return queue;
 }
 
@@ -35,10 +68,11 @@ PmError Pm_QueueDestroy(PmQueue *q)
     PmQueueRep *queue = (PmQueueRep *) q;
 	
 	/* arg checking */
-    if (!queue || !queue->buffer) 
+    if (!queue || !queue->buffer || !queue->peek) 
 		return pmBadPtr;
     
-	pm_free(queue->buffer);
+    pm_free(queue->peek);
+    pm_free(queue->buffer);
     pm_free(queue);
     return pmNoError;
 }
@@ -48,19 +82,80 @@ PmError Pm_Dequeue(PmQueue *q, void *msg)
 {
     long head;
     PmQueueRep *queue = (PmQueueRep *) q;
+    int i;
+    int32 *msg_as_int32 = (int32 *) msg;
 
-	/* arg checking */
-    if(!queue)
-		return pmBadPtr;
+    /* arg checking */
+    if (!queue)
+        return pmBadPtr;
 
-    if (queue->overflow) {
+    if (queue->peek_flag) {
+#ifdef QUEUE_DEBUG
+	printf("Pm_Dequeue returns peek msg:");
+	for (i = 0; i < queue->msg_size - 1; i++) {
+	    printf(" %d", queue->peek[i]);
+	}
+	printf("\n");
+#endif
+        memcpy(msg, queue->peek, (queue->msg_size - 1) * sizeof(int32));
+	queue->peek_flag = FALSE;
+	return 1;
+    }
+
+    head = queue->head;
+    /* if writer overflows, it writes queue->overflow = tail+1 so that
+     * when the reader gets to that position in the buffer, it can 
+     * return the overflow condition to the reader. The problem is that
+     * at overflow, things have wrapped around, so tail == head, and the
+     * reader will detect overflow immediately instead of waiting until
+     * it reads everything in the buffer, wrapping around again to the
+     * point where tail == head. So the condition also checks that
+     * queue->buffer[head] is zero -- if so, then the buffer is now
+     * empty, and we're at the point in the msg stream where overflow
+     * occurred. It's time to signal overflow to the reader. If 
+     * queue->buffer[head] is non-zero, there's a message there and we
+     * should read all the way around the buffer before signalling overflow.
+     * There is a write-order dependency here, but to fail, the overflow
+     * field would have to be written while an entire buffer full of 
+     * writes are still pending. I'm assuming out-of-order writes are
+     * possible, but not that many.
+     */
+    if (queue->overflow == head + 1 && !queue->buffer[head]) {
         queue->overflow = FALSE;
         return pmBufferOverflow;
     }
 
-    head = queue->head; /* make sure this is written after access */
-    if (head == queue->tail) return 0;
-    memcpy(msg, queue->buffer + head, queue->msg_size);
+    /* test to see if there is data in the queue -- test from back
+     * to front so if writer is simultaneously writing, we don't
+     * waste time discovering the write is not finished 
+     */
+    for (i = queue->msg_size - 1; i >= 0; i--) {
+        if (!queue->buffer[head + i]) {
+            return 0;
+	}
+    }
+#ifdef QUEUE_DEBUG
+    printf("Pm_Dequeue:");
+    for (i = 0; i < queue->msg_size; i++) {
+        printf(" %d", queue->buffer[head + i]);
+    }
+    printf("\n");
+#endif
+    memcpy(msg, (char *) &queue->buffer[head + 1], 
+	   sizeof(int32) * (queue->msg_size - 1));
+    /* fix up zeros */
+    i = queue->buffer[head];
+    while (i < queue->msg_size) {
+        int32 j;
+	i--; /* msg does not have extra word so shift down */
+	j = msg_as_int32[i];
+	msg_as_int32[i] = 0;
+	i = j;
+    }
+    /* signal that data has been removed by zeroing: */
+    bzero((char *) &queue->buffer[head], sizeof(int32) * queue->msg_size);
+
+    /* update head */
     head += queue->msg_size;
     if (head == queue->len) head = 0;
     queue->head = head;
@@ -74,46 +169,75 @@ PmError Pm_Enqueue(PmQueue *q, void *msg)
 {
     PmQueueRep *queue = (PmQueueRep *) q;
     long tail;
+    int i;
+    int32 *src = (int32 *) msg;
+    int32 *ptr;
 
-	/* arg checking */
-	if (!queue)
-		return pmBadPtr;
+    int32 *dest;
 
-	tail = queue->tail;
-    memcpy(queue->buffer + tail, msg, queue->msg_size);
+    int rslt;
+    /* no more enqueue until receiver acknowledges overflow */
+    if (queue->overflow) return pmBufferOverflow;
+    rslt = Pm_QueueFull(q);
+    if (rslt == pmBadPtr) return rslt;
+    tail = queue->tail;
+    if (rslt) {
+        queue->overflow = tail + 1;
+	return pmBufferOverflow;
+    }
+
+    /* queue is has room for message, and overflow flag is cleared */
+    ptr = &queue->buffer[tail];
+    dest = ptr + 1;
+    for (i = 1; i < queue->msg_size; i++) {
+	int32 j = src[i - 1];
+	if (!j) {
+            *ptr = i;
+	    ptr = dest;
+	} else {
+	    *dest = j;
+	}
+	dest++;
+    }
+    *ptr = i;
+#ifdef QUEUE_DEBUG
+    printf("Pm_Enqueue:");
+    for (i = 0; i < queue->msg_size; i++) {
+        printf(" %d", queue->buffer[tail + i]);
+    }
+    printf("\n");
+#endif
     tail += queue->msg_size;
     if (tail == queue->len) tail = 0;
-    if (tail == queue->head) {
-        queue->overflow = TRUE;
-        /* do not update tail, so message is lost */
-        return pmBufferOverflow;
-    }
     queue->tail = tail;
     return pmNoError;
 }
+
 
 int Pm_QueueEmpty(PmQueue *q)
 { 
     PmQueueRep *queue = (PmQueueRep *) q;
     if (!queue) return TRUE;
-    return (queue->head == queue->tail);
+    return (queue->buffer[queue->head] == 0);
 }
+
 
 int Pm_QueueFull(PmQueue *q)
 {
     PmQueueRep *queue = (PmQueueRep *) q;
-	long tail;
-	
-	/* arg checking */
-	if(!queue)
-		return pmBadPtr;
-	
-	tail = queue->tail;
-    tail += queue->msg_size;
-    if (tail == queue->len) {
-        tail = 0;
+    int tail;
+    int i; 
+    /* arg checking */
+    if (!queue)
+        return pmBadPtr;
+    tail = queue->tail;
+    /* test to see if there is space in the queue */
+    for (i = 0; i < queue->msg_size; i++) {
+        if (queue->buffer[tail + i]) {
+            return TRUE;
+	}
     }
-    return (tail == queue->head);
+    return FALSE;
 }
 
 void *Pm_QueuePeek(PmQueue *q)
@@ -121,12 +245,16 @@ void *Pm_QueuePeek(PmQueue *q)
     long head;
     PmQueueRep *queue = (PmQueueRep *) q;
 
-	/* arg checking */
-    if(!queue)
-		return NULL;
+    /* arg checking */
+    if (!queue)
+        return NULL;
 
-    head = queue->head; /* make sure this is written after access */
-    if (head == queue->tail) return NULL;
-    return queue->buffer + head;
+    if (queue->peek_flag) {
+        return queue->peek;
+    } else if (Pm_Dequeue(q, queue->peek) == 1) {
+        queue->peek_flag = TRUE;
+        return queue->peek;
+    }
+    return NULL;
 }
 
